@@ -13,15 +13,12 @@ package org.ezkey.tests.util;
 import static io.restassured.RestAssured.given;
 import static org.assertj.core.api.Assertions.assertThat;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.node.ObjectNode;
 import io.restassured.http.ContentType;
 import io.restassured.response.Response;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.HashMap;
@@ -30,6 +27,8 @@ import java.util.concurrent.locks.ReentrantLock;
 import org.ezkey.tests.config.DockerStackConfig;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import tools.jackson.databind.ObjectMapper;
+import tools.jackson.databind.node.ObjectNode;
 
 /**
  * Service for bootstrapping admin enrollment and obtaining admin token.
@@ -132,7 +131,7 @@ public class AdminBootstrapService {
       } else {
         log.info("Cached token is invalid, will create new token");
         // Token is invalid, clear cache and continue to Tier 2
-        Path tokenPath = Paths.get(TOKEN_FILE_PATH);
+        Path tokenPath = Path.of(TOKEN_FILE_PATH);
         try {
           if (Files.exists(tokenPath)) {
             Files.delete(tokenPath);
@@ -1094,7 +1093,7 @@ public class AdminBootstrapService {
    * @return Admin token, or null if not found
    */
   private String loadTokenFromFile() {
-    Path tokenPath = Paths.get(TOKEN_FILE_PATH);
+    Path tokenPath = Path.of(TOKEN_FILE_PATH);
     if (!Files.exists(tokenPath)) {
       return null;
     }
@@ -1102,8 +1101,8 @@ public class AdminBootstrapService {
     try {
       ObjectMapper mapper = new ObjectMapper();
       ObjectNode jsonNode = (ObjectNode) mapper.readTree(tokenPath.toFile());
-      return jsonNode.get("token").asText();
-    } catch (IOException e) {
+      return jsonNode.get("token").asString();
+    } catch (Exception e) {
       log.warn("Failed to load token from file: {}", e.getMessage());
       return null;
     }
@@ -1116,7 +1115,7 @@ public class AdminBootstrapService {
    */
   private void saveTokenToFile(String token) {
     try {
-      Path tokenPath = Paths.get(TOKEN_FILE_PATH);
+      Path tokenPath = Path.of(TOKEN_FILE_PATH);
       Path parentDir = tokenPath.getParent();
 
       if (parentDir != null && !Files.exists(parentDir)) {
@@ -1188,8 +1187,8 @@ public class AdminBootstrapService {
         return null;
       }
 
-      String privateKey = jsonNode.get("privateKey").asText();
-      String publicKey = jsonNode.get("publicKey").asText();
+      String privateKey = jsonNode.get("privateKey").asString();
+      String publicKey = jsonNode.get("publicKey").asString();
       int keySize =
           jsonNode.has("keySize") ? jsonNode.get("keySize").asInt() : 256; // Ed25519 default
 
@@ -1207,7 +1206,7 @@ public class AdminBootstrapService {
    * @return Device credentials, or null if not found
    */
   private DeviceCredentials loadDeviceCredentials() {
-    Path credentialsPath = Paths.get(DEVICE_CREDENTIALS_FILE_PATH);
+    Path credentialsPath = Path.of(DEVICE_CREDENTIALS_FILE_PATH);
     if (!Files.exists(credentialsPath)) {
       return null;
     }
@@ -1217,14 +1216,14 @@ public class AdminBootstrapService {
       ObjectNode jsonNode = (ObjectNode) mapper.readTree(credentialsPath.toFile());
 
       Integer enrollmentId = jsonNode.get("enrollmentId").asInt();
-      String privateKey = jsonNode.get("privateKey").asText();
-      String publicKey = jsonNode.get("publicKey").asText();
+      String privateKey = jsonNode.get("privateKey").asString();
+      String publicKey = jsonNode.get("publicKey").asString();
       int keySize =
           jsonNode.has("keySize") ? jsonNode.get("keySize").asInt() : 256; // Ed25519 default
 
       log.info("Device credentials loaded from file");
       return new DeviceCredentials(enrollmentId, privateKey, publicKey, keySize);
-    } catch (IOException e) {
+    } catch (Exception e) {
       log.warn("Failed to load device credentials from file: {}", e.getMessage());
       return null;
     }
@@ -1237,7 +1236,7 @@ public class AdminBootstrapService {
    */
   private void saveDeviceCredentials(DeviceCredentials credentials) {
     try {
-      Path credentialsPath = Paths.get(DEVICE_CREDENTIALS_FILE_PATH);
+      Path credentialsPath = Path.of(DEVICE_CREDENTIALS_FILE_PATH);
       Path parentDir = credentialsPath.getParent();
 
       if (parentDir != null && !Files.exists(parentDir)) {
