@@ -12,14 +12,11 @@ package org.ezkey.tests.util;
 
 import static io.restassured.RestAssured.given;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.node.ObjectNode;
 import io.restassured.http.ContentType;
 import io.restassured.response.Response;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.concurrent.locks.ReentrantLock;
@@ -27,6 +24,8 @@ import org.ezkey.tests.config.DockerStackConfig;
 import org.ezkey.tests.util.CryptoApiClient.Ed25519KeyPair;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import tools.jackson.databind.ObjectMapper;
+import tools.jackson.databind.node.ObjectNode;
 
 /**
  * Helper class for creating TenantAdmin with full device simulation and authentication.
@@ -457,7 +456,7 @@ public class TenantAdminTestHelper {
    */
   private DeviceCredentials loadDeviceCredentials(Integer tenantId) {
     Path credentialsPath =
-        Paths.get(String.format(TENANT_ADMIN_DEVICE_CREDENTIALS_FILE_PATTERN, tenantId));
+        Path.of(TENANT_ADMIN_DEVICE_CREDENTIALS_FILE_PATTERN.formatted(tenantId));
 
     if (!Files.exists(credentialsPath)) {
       return null;
@@ -481,11 +480,11 @@ public class TenantAdminTestHelper {
       return new DeviceCredentials(
           jsonNode.get("enrollmentId").asInt(),
           jsonNode.get("adminId").asInt(),
-          jsonNode.get("username").asText(),
-          jsonNode.get("enrollmentProofToken").asText(),
-          jsonNode.get("privateKey").asText(),
-          jsonNode.get("publicKey").asText());
-    } catch (IOException e) {
+          jsonNode.get("username").asString(),
+          jsonNode.get("enrollmentProofToken").asString(),
+          jsonNode.get("privateKey").asString(),
+          jsonNode.get("publicKey").asString());
+    } catch (Exception e) {
       log.warn("Failed to load device credentials: {}", e.getMessage());
       return null;
     }
@@ -499,7 +498,7 @@ public class TenantAdminTestHelper {
    */
   private void saveDeviceCredentials(DeviceCredentials credentials, Integer tenantId) {
     Path credentialsPath =
-        Paths.get(String.format(TENANT_ADMIN_DEVICE_CREDENTIALS_FILE_PATTERN, tenantId));
+        Path.of(TENANT_ADMIN_DEVICE_CREDENTIALS_FILE_PATTERN.formatted(tenantId));
 
     try {
       Files.createDirectories(credentialsPath.getParent());
@@ -527,7 +526,7 @@ public class TenantAdminTestHelper {
    * @return Token or null if not found
    */
   private String loadTokenFromFile(Integer tenantId) {
-    Path tokenPath = Paths.get(String.format(TENANT_ADMIN_TOKEN_FILE_PATTERN, tenantId));
+    Path tokenPath = Path.of(TENANT_ADMIN_TOKEN_FILE_PATTERN.formatted(tenantId));
 
     if (!Files.exists(tokenPath)) {
       return null;
@@ -536,8 +535,8 @@ public class TenantAdminTestHelper {
     try {
       ObjectMapper mapper = new ObjectMapper();
       ObjectNode jsonNode = (ObjectNode) mapper.readTree(tokenPath.toFile());
-      return jsonNode.get("token").asText();
-    } catch (IOException e) {
+      return jsonNode.get("token").asString();
+    } catch (Exception e) {
       log.warn("Failed to load token: {}", e.getMessage());
       return null;
     }
@@ -550,7 +549,7 @@ public class TenantAdminTestHelper {
    * @param tenantId Tenant ID
    */
   private void saveTokenToFile(String token, Integer tenantId) {
-    Path tokenPath = Paths.get(String.format(TENANT_ADMIN_TOKEN_FILE_PATTERN, tenantId));
+    Path tokenPath = Path.of(TENANT_ADMIN_TOKEN_FILE_PATTERN.formatted(tenantId));
 
     try {
       Files.createDirectories(tokenPath.getParent());
